[package]
name = "proj-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proj-rust"
path = "main.rs"

[dependencies]
axum = "0.6.11"
deadpool-postgres = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.158", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.7"
